[gd_scene load_steps=11 format=3 uid="uid://cv6e0j8ix7vsh"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_67gjx"]
[ext_resource type="Texture2D" uid="uid://bgdbxn7jiw3u5" path="res://Textures/Save_Slots_Button.png" id="2_xugl2"]
[ext_resource type="Theme" uid="uid://q20srnrdcdy3" path="res://SliderTheme.tres" id="3_6a021"]
[ext_resource type="Texture2D" uid="uid://cbjbpvrjqlkch" path="res://Buttons/settings3.png" id="4_1m05d"]
[ext_resource type="Texture2D" uid="uid://dm0wvjqek5iex" path="res://Textures/button8.png" id="6_4ialg"]

[sub_resource type="LabelSettings" id="LabelSettings_73b4o"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_4ecnj"]
font_size = 35

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o0srn"]
texture = ExtResource("2_xugl2")

[sub_resource type="Theme" id="Theme_leh0t"]
HSlider/styles/slider = SubResource("StyleBoxTexture_o0srn")
OptionButton/colors/font_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_06ni4"]
font_size = 30

[node name="Settings" type="Node2D"]
script = ExtResource("1_67gjx")

[node name="Label" type="Label" parent="."]
offset_top = 117.0
offset_right = 1920.0
offset_bottom = 180.0
text = "THE settings"
label_settings = SubResource("LabelSettings_73b4o")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 163.0
offset_top = 259.0
offset_right = 1728.0
offset_bottom = 498.0

[node name="WindowMode" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/WindowMode"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Window Mode"
label_settings = SubResource("LabelSettings_4ecnj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/WindowMode"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_leh0t")
item_count = 2
selected = 0
popup/item_0/text = "Fullscreen"
popup/item_0/id = 3
popup/item_1/text = "Windowed"
popup/item_1/id = 2

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Music"
label_settings = SubResource("LabelSettings_06ni4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_6a021")
max_value = 1.0
step = 0.01
value = 0.5

[node name="VolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Volume"
label_settings = SubResource("LabelSettings_06ni4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/VolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_6a021")
max_value = 1.0
step = 0.01
value = 0.5

[node name="BrightnessContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/BrightnessContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Brightness"
label_settings = SubResource("LabelSettings_06ni4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/BrightnessContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("3_6a021")
min_value = 0.1
max_value = 1.9
step = 0.01
value = 0.5

[node name="Button" type="Button" parent="."]
offset_left = 1462.0
offset_top = 913.0
offset_right = 1792.0
offset_bottom = 1003.0
text = "Apply Settings"

[node name="Button2" type="Button" parent="."]
offset_left = 44.0
offset_top = 45.0
offset_right = 374.0
offset_bottom = 135.0
text = "Back"

[node name="MenuButton" type="Button" parent="."]
offset_left = 1583.0
offset_top = 41.0
offset_right = 1783.0
offset_bottom = 101.0
scale = Vector2(1.3, 1.3)
text = "Main Menu"

[node name="Settings" type="Sprite2D" parent="."]
z_index = -6
position = Vector2(960, 540)
texture = ExtResource("4_1m05d")

[node name="Button4" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.901961)
position = Vector2(1624, 949)
texture = ExtResource("6_4ialg")

[connection signal="item_selected" from="VBoxContainer/WindowMode/OptionButton" to="." method="_on_window_mode_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicContainer/HSlider" to="." method="_on_music_slider_changed"]
[connection signal="value_changed" from="VBoxContainer/VolumeContainer/HSlider" to="." method="_on_volume_slider_changed"]
[connection signal="value_changed" from="VBoxContainer/BrightnessContainer/HSlider" to="." method="_on_brightness_changed"]
[connection signal="pressed" from="Button" to="." method="_on_settings_applied"]
[connection signal="pressed" from="Button2" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
